--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="height: 100vh;">
-        <iframe src="https://github.com/soumyo2004/soumyo2004.github.io/blob/c6afa9743bd303d04959eed6b6f6c03f2656a850/Soumyodeep%20Nayak_Data%20Scientist.pdf" width="100%" height="100%"></iframe>
+        <iframe src="Soumyodeep Nayak_Data Scientist.pdf" width="100%" height="100%"></iframe>
     </div>
 </body>
 </html>
